--- a/css/indexSmall.css
+++ b/css/indexSmall.css
@@ -6,6 +6,7 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 10px;
 }
 
 .name {
@@ -17,12 +18,16 @@ body {
 }
 
 main {
-    background-color: antiquewhite;
+    background-color: white;
     text-align: center;
     width: 80%;
     margin: 0 auto;
     font-family: 'Martel', serif;
     font-size: 0.8em;
+}
+
+h2{
+    padding-top: 10px;
 }
 
 .ulLinks {
