--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -4,6 +4,14 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 /*----------- apply a natural box layout model to all elements --------------*/
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+header{
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    grid-template-rows: auto auto;
+    grid-gap: 1em;
+    padding: 20px;
+}
+
 nav{
     background-color: rgb(215, 215, 215);
 }
@@ -13,7 +21,6 @@ nav button {
     background: transparent;
     border: none;
     font-size: 2rem;
-    color: #555;
 }
 
 nav ul{
@@ -61,4 +68,85 @@ nav ul.open {
 
 #hamburgerBtn.open span:nth-child(2) {
     display: block;
+}
+
+.saguaroLogo {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.saguaroTitle {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.primaryNav {
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+.fullDate {
+    grid-column: 1/6;
+    grid-row: 2/3;
+}
+
+.facebook {
+    grid-column: 4/5;
+    grid-row: 1/2;
+}
+
+.twitter {
+    grid-column: 5/6;
+    grid-row: 1/2;
+}
+
+main {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(3, auto);
+    grid-gap: 1em;
+    margin: 20px; 
+}
+
+div {
+    background-color: lightgray;
+    border-style: solid;
+    border-color: black;
+}
+
+.event {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    height: 200px;
+}
+
+.callToAction {
+    grid-column: 2/4;
+    grid-row: 1/3;
+}
+
+.weather {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    height: 200px;
+}
+
+.news {
+    grid-column: 2/4;
+    grid-row: 3/4;
+}
+
+.join {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    height: 200px;
+}
+
+.spotlight {
+    grid-column: 4/5;
+    grid-row: 1/4;
+}
+
+footer {
+
 }
