--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,8 +1,113 @@
 @media only screen and (min-width: 64rem) {
 
-    nav ul li a {
-        padding: .5rem 1rem;
+    nav button {
+        display: none;
     }
 
+    nav ul#primaryNav {
+        display: flex;
+        margin-left: 2vw;
+        border-left: 1px solid rgb(255, 255, 255);
+    }
+
+    nav ul li a {
+        border: none;
+        border-right: 1px solid rgb(255, 255, 255);
+    }
+
+    header{
+        display: grid;
+        grid-template-columns: auto auto auto 40px 40px;
+        grid-template-rows: auto 50px;
+        grid-gap: 1em;
+        padding: 20px;
+    }
     
+    nav{
+        grid-column: 3/4;
+        grid-row: 1/2;
+        margin-left: -10px;
+        margin-right: 10px;
+    }
+
+    .saguaroLogo {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        justify-self: end;
+        width: 200px;
+    }
+    
+    .saguaroTitle {
+        grid-column: 2/3;
+        grid-row: 1/2;
+        align-self: center;
+        justify-self: start;
+        color: white;
+        font-size: 32px;
+    }
+    
+    .fullDate {
+        grid-column: 1/6;
+        grid-row: 2/3;
+        font-size: 18px;
+        text-align: center;
+        padding-top: 10px;
+    }
+    
+    .facebook {
+        grid-column: 4/5;
+        grid-row: 1/2;
+        align-self: center;
+        margin: 0 0 0 0;
+    }
+    
+    .twitter {
+        grid-column: 5/6;
+        grid-row: 1/2;
+        align-self: center;
+    }
+    
+    main {
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+        grid-template-rows: repeat(3, auto);
+        grid-gap: 1em;
+        margin: 20px 30px;
+    }
+    
+    .event {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        height: 200px;
+    }
+    
+    .callToAction {
+        grid-column: 2/4;
+        grid-row: 1/3;
+        height: auto;
+    }
+    
+    .weather {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        height: 200px;
+    }
+    
+    .news {
+        grid-column: 2/4;
+        grid-row: 3/4;
+        height: auto;
+    }
+    
+    .join {
+        grid-column: 1/2;
+        grid-row: 3/4;
+        height: 200px;
+    }
+    
+    .spotlight {
+        grid-column: 4/5;
+        grid-row: 1/4;
+        height: auto;
+    }
 }
