--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -20,6 +20,13 @@ p {
     font-family: 'Roboto', serif, sans-serif;
 }
 
+.meetingBanner {
+    text-align: center;
+    padding: 5px;
+    font-size: 22px;
+    margin-top: 3px;
+}
+
 header{
     display: grid;
     grid-template-columns: auto auto 40px 40px;
@@ -154,12 +161,34 @@ div {
     grid-column: 1/2;
     grid-row: 1/2;
     height: 200px;
+    position: relative;
+}
+
+.actionWelcome {
+    margin: 20px 5px 5px 20px;
+    color: black;
+    font-size: 28px;
+}
+
+.actionJoin {
+    position: absolute;
+    top: 300px;
+    left: 500px;
+    font-size: 20px;
+    background-color: #69cdf2;
+    color: white;
+    padding: 15px;
 }
 
 .weather {
     grid-column: 1/2;
     grid-row: 3/4;
     height: 200px;
+    text-align: center;
+}
+
+.weatherTitle {
+    margin-top: 5px;
 }
 
 .news {
