--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -69,10 +69,10 @@
     
     main {
         display: grid;
-        grid-template-columns: repeat(4, auto);
+        grid-template-columns: 350px 350px 350px 350px;
         grid-template-rows: repeat(3, auto);
         grid-gap: 1em;
-        margin: 20px 30px;
+        margin: 20px 0px 20px 35px;
     }
     
     .event {
@@ -87,6 +87,15 @@
         height: auto;
     }
     
+    .actionJoin {
+        position: absolute;
+        top: 300px;
+        left: 480px;
+        font-size: 24px;
+        padding: 15px;
+        padding: 10px 25px;
+    }
+
     .weather {
         grid-column: 1/2;
         grid-row: 2/3;
