--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -7,10 +7,6 @@
     p {
         font-size: 15px;
     }
-
-    .saguaroLogo {
-        width: 200px;
-    }
     
     .saguaroTitle {
         font-size: 32px;
@@ -36,9 +32,9 @@
     
     main {
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto;
         grid-template-rows: repeat(6, auto);
-        margin: 20px 70px;
+        margin: 20px 100px;
     }
     
     .event {
@@ -50,12 +46,13 @@
     .callToAction {
         grid-column: 1/3;
         grid-row: 2/3;
+        background-image: url(images/wdd230OrgMedium.jpg);
     }
     
     .actionJoin {
         position: absolute;
         top: 100px;
-        left: 580px;
+        left: 540px;
         font-size: 24px;
         padding: 15px;
         padding: 10px 25px;
@@ -85,17 +82,13 @@
     }
     
     .bugDiv {
-        margin: 5px 100px 5px 90px;
+        margin: 5px 0 5px 0;
         width: 270px;
         height: 300px;
     }
     
-    .bugImg {
-        width: 60px;
-    }
-    
     .gardenDiv {
-        margin: 5px 15px 5px 0px;
+        margin: 5px 0 5px 0;
         width: 270px;
         height: 300px;
     }
