--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -32,7 +32,7 @@
     
     main {
         display: grid;
-        grid-template-columns: auto;
+        grid-template-columns: auto auto;
         grid-template-rows: repeat(6, auto);
         margin: 20px 100px;
     }
@@ -44,23 +44,23 @@
     }
     
     .callToAction {
-        grid-column: 1/3;
+        grid-column: 1/2;
         grid-row: 2/3;
-        background-image: url(images/wdd230OrgMedium.jpg);
+        
     }
     
     .actionJoin {
         position: absolute;
         top: 100px;
-        left: 540px;
+        left: 130px;
         font-size: 24px;
         padding: 15px;
         padding: 10px 25px;
     }
 
     .weather {
-        grid-column: 1/3;
-        grid-row: 3/4;
+        grid-column: 2/3;
+        grid-row: 2/3;
         height: 200px;
     }
     
@@ -82,13 +82,13 @@
     }
     
     .bugDiv {
-        margin: 5px 0 5px 0;
+        margin: 5px 0 5px 50px;
         width: 270px;
         height: 300px;
     }
     
     .gardenDiv {
-        margin: 5px 0 5px 0;
+        margin: 5px 0 5px 50px;
         width: 270px;
         height: 300px;
     }
