--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -136,7 +136,7 @@
         margin: 5px 10px 5px 20px;
         width: 300px;
         height: 310px;
-        
+        text-align: center;
     }
     
     .gardenDiv {
@@ -149,4 +149,44 @@
     .gardenImg {
         width: 70px;
     }
+
+    /*Discover Page*/
+
+    .discoverMain {
+        display: grid;
+        grid-template-columns: repeat(6, 200px);
+        grid-template-rows: repeat(2, 300px);
+        grid-gap: 1em;
+        margin: 10px 60px;
+    }
+
+    .population {
+        grid-column: 1/3;
+        grid-row: 1/2;
+
+    }
+
+
+    .medianAge {
+        grid-column: 3/5;
+        grid-row: 1/2;
+
+    }
+
+    .employment {
+        grid-column: 5/7;
+        grid-row: 1/2;
+
+    }
+
+    .occupations {
+        grid-column: 2/4;
+        grid-row: 2/3;
+    }
+
+    .industries {
+        grid-column: 4/6;
+        grid-row: 2/3;
+    }
+
 }
