--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -154,18 +154,15 @@
 
     .discoverMain {
         display: grid;
-        grid-template-columns: repeat(6, 200px);
-        grid-template-rows: repeat(2, 300px);
-        grid-gap: 1em;
-        margin: 10px 60px;
+        grid-template-columns: repeat(6, auto);
+        grid-template-rows: 320px 320px 70px;
+
     }
 
     .population {
         grid-column: 1/3;
         grid-row: 1/2;
-
     }
-
 
     .medianAge {
         grid-column: 3/5;
@@ -187,6 +184,13 @@
     .industries {
         grid-column: 4/6;
         grid-row: 2/3;
+    }
+
+    .visits {
+        grid-column: 3/5;
+        grid-row: 3/4;
+        
+        font-size: 22px;
     }
 
 }
