--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -152,4 +152,51 @@
         grid-row: 4/5;
         font-size: 16px;
     }
+
+    /*Discover Page*/
+
+    .discoverMain {
+        display: grid;
+        grid-template-columns: repeat(5, auto);
+        grid-template-rows: repeat(3, 320px) 70px;
+    }
+
+    .population {
+        grid-column: 1/3;
+        grid-row: 1/2;
+
+    }
+
+    .medianAge {
+        grid-column: 3/5;
+        grid-row: 1/2;
+
+    }
+
+    .employment {
+        grid-column: 1/3;
+        grid-row: 2/3;
+
+    }
+
+    .occupations {
+        grid-column: 3/5;
+        grid-row: 2/3;
+    }
+
+    .industries {
+        grid-column: 2/4;
+        grid-row: 3/4;
+    }
+
+    .discoveryImgs:hover {
+        box-shadow: 10px 0px 50px #333;
+    }
+
+    .visits {
+        grid-column: 2/4;
+        grid-row: 4/5;
+        
+        font-size: 19px;
+    }
 }
