--- a/lesson8/tablecss.css
+++ b/lesson8/tablecss.css
@@ -1,6 +1,12 @@
 table {
     border-collapse: collapse;
     border: 1px solid black;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    table-layout: fixed;
+    width: 300px;
+    height: 400px;
 }
 
 table thead tr td{
@@ -20,8 +26,13 @@ th {
     text-align: center;
     padding: 5px 15px;
     background-color: rgb(232, 232, 232);
+    font-size: 20px;
 }
 
 tr:nth-child(even) {
     background-color: rgb(232, 232, 232);
+}
+
+.highlighted {
+    background-color: rgba(165, 42, 42, 0.681);
 }
