--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -66,7 +66,7 @@
         align-self: center;
     }
     
-    main {
+    main.indexMain {
         display: grid;
         grid-template-columns: 350px 310px 310px 350px;
         grid-template-rows: repeat(3, auto);
@@ -193,4 +193,9 @@
         font-size: 22px;
     }
 
+    /*Join Page*/
+    form legend {
+        font-size: 24px;
+    }
 }
+
