--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -148,7 +148,7 @@ header a figure.facebook img {
     margin: 0 0 0 -25px;
 }
 
-main {
+main.indexMain {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: repeat(6, auto);
@@ -369,4 +369,92 @@ div {
     font-size: 16px;
     height: 30px;
     margin: 10px;
+}
+
+/*Join Page*/
+main.joinMain {
+    max-width: 64rem;
+    margin: auto;
+    
+}
+
+main.joinMain h1 {
+    text-align: center;
+}
+
+form {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto auto;
+}
+
+form fieldset {
+    margin: .5rem auto;
+    background-color: rgb(255, 255, 255);
+    border: 4px solid rgb(229, 229, 229);
+    border-radius: 10px;
+    width: 500px;
+}
+
+form legend {
+    margin: 0 0 0 15px;
+    padding: 5px;
+    font-weight: bolder;
+    font-size: 20px;
+    background-color: rgb(255, 255, 255);
+    border: 4px solid rgb(229, 229, 229);
+}
+
+form label.applicant, form div {
+    display: block;
+    padding-top: 1rem;
+    font-size: 16px;
+
+}
+
+form label.applicant input, form label.applicant select {
+    display: block;
+    font-size: 16px;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+form label.busiDescription textarea{
+    width: 100%;
+}
+
+
+form label.membership {
+    display: block;
+    padding: .75rem 0;
+}
+
+form input.submitBtn {
+    border: none;
+    background-color: #9c2c13;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem;
+    margin: 10px;
+    width: 96%;
+    max-width: 20rem;
+    justify-self: center;
+    
+}
+
+form label.applicant input:required {
+    border: red solid 2px
+}
+
+form label.applicant input:required:valid {
+    border: green solid 2px
+}
+
+.todayDate {
+    visibility: hidden;
 }
