--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -461,9 +461,27 @@ form label.applicant input:required:valid {
 
 /*Directory Page*/
 main.directoryMain {
-    margin-left: 100px;
-    margin-right: 100px;
     min-width: 400px;
+    margin: 10px 100px 40px 100px;
+}
+
+.btnDiv {
+    margin: 10px 0 20px 0;
+    padding: 10px;
+}
+
+.gridBtn {
+    margin: 10px 10px 10px 5px;
+    padding: 5px;
+    width: 70px;
+    height: 50px;
+}
+
+.listBtn {
+    margin: 10px 5px 10px 10px;
+    padding: 5px;
+    width: 70px;
+    height: 50px;
 }
 
 .grid {
@@ -472,7 +490,7 @@ main.directoryMain {
     grid-gap: 1em;
     background-color: none;
     border: none;
-    margin: 10px 0 40px 0;
+    
 }
 
 .grid section {
