--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -249,6 +249,8 @@ div {
     grid-row: 3/4;
     margin: 5px;
     border-bottom: solid 3px rgb(229, 229, 229);
+
+    text-transform: capitalize;
 }
 
 #windSpeed {
