--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -9,25 +9,25 @@ body {
 }
 
 h1 {
+    font-size: 52px;
     font-family:'Alegreya', serif, sans-serif;
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 44px;
     font-family:'Alegreya', serif, sans-serif;
 }
 
 p {
-    font-size: 14px;
+    font-size: 32px;
     font-family: 'Roboto', serif, sans-serif;
     margin: 10px;
 }
 
-.meetingBanner {
+#meetingBanner {
     text-align: center;
     padding: 5px;
-    font-size: 22px;
-    margin-top: 3px;
+    font-size: 26px;
 } 
 
 header{
@@ -54,6 +54,7 @@ nav button {
     font-size: 2rem;
     color: white;
     align-self: center;
+    width: 44px;
 }
 
 nav ul{
@@ -116,15 +117,16 @@ nav ul.open {
     align-self: center;
     justify-self: start;
     color: white;
-    font-size: 22px;
+    font-size: 48px;
 }
 
 .fullDate {
     grid-column: 1/6;
     grid-row: 3/4;
-    font-size: 16px;
+    font-size: 32px;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 5px;
+    
 }
 
 .facebook {
@@ -152,27 +154,25 @@ main.indexMain {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: repeat(6, auto);
-    grid-gap: 1em;
-    margin: 20px 50px;
+    grid-gap: 1.5em;
+    margin: 20px 0;
 }
 
 div {
-    background-color: rgb(255, 255, 255);
-    border: 4px solid rgb(229, 229, 229);
+    background-color: rgb(253, 253, 253);
+    border: 4px solid rgb(162, 162, 162);
     text-align: center;
 }
 
 .event {
     grid-column: 1/2;
     grid-row: 2/3;
-    height: 200px;
     text-align: center;
 }
 
 .callToAction {
     grid-column: 1/2;
     grid-row: 1/2;
-    height: 200px;
     position: relative;
     overflow: hidden;
 
@@ -181,13 +181,13 @@ div {
 .actionWelcome {
     position: absolute;
     top: 5px;
-    left: 30px;
+    left: 32px;
     color: black;
     font-size: 28px;
 }
 
 .heroImg {
-    padding: 0;
+    width: 100%;
 }
 
 .actionJoin {
@@ -205,8 +205,8 @@ div {
 .weather {
     grid-column: 1/2;
     grid-row: 3/4;
-    height: 200px;
     text-align: center;
+    margin: 0 150px;
 
     display: grid;
     grid-template-columns: repeat(2, auto);
@@ -218,6 +218,7 @@ div {
     margin-top: 5px;
     grid-column: 1/3;
     grid-row: 1/2;
+    text-decoration: underline;
 }
 
 #weatherIcon {
@@ -225,9 +226,9 @@ div {
     grid-row: 2/4;
 
     width: 100%;
-    height: 80px;
+    height: 150px;
     min-width: 40px;
-    max-width: 80px;
+    max-width: 150px;
 
     justify-self: center;
 
@@ -240,23 +241,24 @@ div {
     grid-row: 2/3;
     margin: 5px;
     font-weight: bold;
-    font-size: 22px;
-    border-bottom: solid 3px rgb(229, 229, 229);
+    font-size: 50px;
 }
 
 #weatherType {
     grid-column: 2/3;
     grid-row: 3/4;
     margin: 5px;
-    border-bottom: solid 3px rgb(229, 229, 229);
 
+    align-self: end;
     text-transform: capitalize;
 }
 
 #windSpeed {
     grid-column: 1/3;
     grid-row: 4/5;
-    margin: 5px;
+    margin: 15px 5px 5px 5px;
+
+    border-top: solid 3px rgb(153, 153, 153);
 }
 
 #windchill {
@@ -268,7 +270,6 @@ div {
 .news {
     grid-column: 1/2;
     grid-row: 4/5;
-    height: 200px;
     text-align: center;
 }
 
@@ -279,14 +280,13 @@ div {
 .join {
     grid-column: 1/2;
     grid-row: 6/7;
-    height: 200px;
     text-align: center;
 }
 
 .joinHeader {
     background-color: #69cdf2;
     color: white;
-    margin: 20px 90px 30px 90px;
+    margin: 20px 200px 30px 200px;
     padding: 10px;
     font-family: 'Oswald', serif, sans-serif;
 }
@@ -294,26 +294,15 @@ div {
 .spotlight {
     grid-column: 1/2;
     grid-row: 5/6;
-    height: 330px;
     text-align: center;
 }
 
 .bugDiv {
-    margin: 5px 3px 5px 10px;
-    width: 200px;
-    height: 310px;
-    float: left;
+    width: 100%;
 }
 
 .gardenDiv {
-    margin: 5px 0px 0px 10px;
-    width: 205px;
-    height: 310px;
-    float: left;
-}
-
-.gardenImg {
-    width: 50px;
+    width: 100%;
 }
 
 .saguaroLogoFooter {
