--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,4 +1,4 @@
-@media (min-width: 10020px) {
+@media screen and (min-width: 65.5em){
 
     h2 {
         font-size: 22px;
@@ -33,20 +33,18 @@
     main.indexMain {
         display: grid;
         grid-template-columns: auto auto;
-        grid-template-rows: repeat(6, auto);
+        grid-template-rows: repeat(5, auto);
         margin: 20px 100px;
     }
     
     .event {
         grid-column: 1/3;
         grid-row: 1/2;
-        height: 200px;
     }
     
     .callToAction {
         grid-column: 1/2;
         grid-row: 2/3;
-        
     }
     
     .actionJoin {
@@ -61,36 +59,28 @@
     .weather {
         grid-column: 2/3;
         grid-row: 2/3;
-        height: 200px;
+        margin: 0;
     }
     
+    #temp {
+        font-size: 32px;
+    }
+
+
+
     .news {
         grid-column: 1/3;
-        grid-row: 5/6;
+        grid-row: 4/5;
     }
     
     .join {
         grid-column: 1/3;
-        grid-row: 6/7;
-        height: 200px;
+        grid-row: 5/6;
     }
     
     .spotlight {
         grid-column: 1/3;
-        grid-row: 4/5;
-        height: 320px;
-    }
-    
-    .bugDiv {
-        margin: 5px 0 5px 50px;
-        width: 270px;
-        height: 300px;
-    }
-    
-    .gardenDiv {
-        margin: 5px 0 5px 50px;
-        width: 270px;
-        height: 300px;
+        grid-row: 3/4;
     }
     
     .gardenImg {
@@ -207,5 +197,18 @@
 
     form legend {
         font-size: 24px;
+    }
+
+    /*Contact Page*/
+    .contactMain h2 {
+        font-size: 32px;
+    }
+
+    .contactMain p {
+        font-size: 26px;
+    }
+
+    .contactMain form p {
+        font-size: 26px;
     }
 }
