--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,4 +1,7 @@
 @media only screen and (min-width: 600px){
+    h1 {
+        font-size: 42px;
+    }
 
     h2 {
         font-size: 22px;
@@ -9,7 +12,7 @@
     }
     
     .saguaroTitle {
-        font-size: 32px;
+        margin: 0 0 0 20px;
     }
 
     
@@ -221,6 +224,10 @@
         padding: .50rem;
         height: 65px;
         font-size: 24px;
+    }
+
+    .thankYou {
+        font-size: 42px;
     }
 
     /*Contact Page*/
