--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -16,7 +16,7 @@ h2 {
 }
 
 p {
-    font-size: 32px;
+    font-size: 28px;
     font-family: 'Roboto', serif, sans-serif;
     margin: 10px;
 }
@@ -105,7 +105,7 @@ nav ul.open {
 .saguaroLogo {
     grid-column: 1/2;
     grid-row: 1/2;
-    justify-self: end;
+    justify-self: center;
     align-self: center;
 }
 
@@ -157,7 +157,7 @@ main.indexMain {
 }
 
 div {
-    background-color: rgb(253, 253, 253);
+    background-color: rgb(233, 233, 233);
     border: 4px solid rgb(162, 162, 162);
     text-align: center;
 }
@@ -166,6 +166,14 @@ div {
     grid-column: 1/2;
     grid-row: 2/3;
     text-align: center;
+}
+
+.event p {
+    font-size: 20px;
+}
+
+.event h2 {
+    text-decoration: underline;
 }
 
 .callToAction {
@@ -277,8 +285,12 @@ div {
     text-align: center;
 }
 
+.newsHeader {
+    font-size: 18px;
+}
+
 .newsText {
-    margin: 7px;
+    margin: 5px;
 }
 
 .join {
@@ -315,11 +327,11 @@ div {
     width: 100%;
 }
 
+
+
 .saguaroLogoFooter {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75px;
+    text-align: center;
 }
 
 .nameFooter {
@@ -356,6 +368,7 @@ div {
 
 .locationFooter {
     text-align: center;
+    display: block;
     font-size: 18px;
     color: white;
     margin: 12px;
@@ -369,6 +382,8 @@ div {
     color: white;
     font-size: 12px;
 }
+
+
 
 /*Discover Page*/
 
@@ -545,6 +560,12 @@ form label.membership input[type="radio"] {
 
 .todayDate {
     visibility: hidden;
+}
+
+.thankYou {
+    color: white;
+    text-align: center;
+    font-size: 52px;
 }
 
 /*Directory Page*/
