--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -163,7 +163,7 @@
         margin: 15px;
     }
 
-    section img.logoImgs {
+    .indexMain section img.logoImgs {
         height: 200px; 
     }
 
@@ -250,6 +250,10 @@
 
     form label.membership input[type="radio"] {
         transform: scale(0.85);
+    }
+
+    form label.busiDescription textarea{
+        font-size: 16px;
     }
 
     form input.submitBtn {
