--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -327,60 +327,87 @@ div {
     width: 100%;
 }
 
+footer {
+    display: grid;
+    grid-template-columns: auto auto auto ;
+    grid-template-rows: auto auto auto auto;
+}
 
-
-.saguaroLogoFooter {
+picture.saguaroLogoFooter {
     display: block;
     text-align: center;
+    justify-self: end;
+}
+
+.saguaroLogo img {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    justify-self: end;
+    margin: 0 0 0 0;
 }
 
 .nameFooter {
+    grid-column: 2/3;
+    grid-row: 1/2;
     text-align: center;
-    font-size: 20px;
+    font-size: 26px;
     margin-bottom: 1px;
     color: white;
     font-weight: bold;
     margin-top: 5px;
+    align-self: end;
 }
 
 .addressFooter{
+    grid-column: 2/3;
+    grid-row: 2/3;
     text-align: center;
     margin-top: 1px;
     color: white;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .emailFooter {
+    grid-column: 3/4;
+    grid-row: 2/3;
     text-align: center;
+    justify-self: start;
     margin-top: 1px;
     color: white;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .phoneFooter {
+    grid-column: 3/4;
+    grid-row: 1/2;
     text-align: center;
     margin-bottom: 1px;
     align-self: end;
     color: white;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 
 .locationFooter {
+    grid-column: 2/3;
+    grid-row: 3/4;
     text-align: center;
     display: block;
     font-size: 18px;
     color: white;
-    margin: 12px;
+    margin: 18px;
     font-size: 14px;
 }
 
 .creatorInfo {
+    grid-column: 2/3;
+    grid-row: 3/4;
     text-align: center;
     border-top: 1px solid rgb(255, 255, 255);
     padding-top: 5px;
     color: white;
-    font-size: 12px;
+    font-size: 18px;
+    margin-left: 16px;
 }
 
 
@@ -536,7 +563,7 @@ form input.submitBtn {
 
 form label.applicant input:required {
     border: red solid 2px;
-    font-size: 16;
+    font-size: 16px;
 }
 
 form label.applicant input:required:valid {
@@ -597,7 +624,6 @@ main.directoryMain {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));    
     grid-gap: 1em;
-    background-color: none;
     border: none;
     
 }
@@ -617,19 +643,20 @@ main.directoryMain {
 
 .grid section {
     overflow: hidden;
+    border: 4px solid black;
 }
 
-section img.logoImgs {
+.indexMain section img.logoImgs {
     width: auto;
     height: 300px;
     margin: 5px;
 }
 
-section h2 {
+.indexMain section h2 {
     margin: 20px 0;
 }
 
-section {
+.indexMain section {
     border: 4px solid rgb(162, 162, 162);
     box-shadow: 0 0 30px rgb(104, 104, 104);
     margin: 10px;
@@ -645,7 +672,7 @@ section {
     text-align: center;
     flex-direction: row;
     justify-content: left;
-    border: 4px solid rgb(229, 229, 229);
+    border: 4px solid black;
     margin: 10px 10px;
 }
 
