--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -145,8 +145,12 @@
         grid-row: 3/4;
     }
     
+    .joinSpacing {
+        margin: 60px 0 0 0;
+    }
+
     .joinHeader{
-        margin: 10px 50px; 
+        margin: 10px 200px; 
     }
 
     .joinHeader button {
