--- a/bountifulFoods/css/medium.css
+++ b/bountifulFoods/css/medium.css
@@ -1,4 +1,5 @@
 @media only screen and (min-width: 600px){
+    /*Home Page*/
     .businessLogo {
         justify-self: end;
     }
@@ -10,8 +11,13 @@
         margin: 0 100px;
     }
 
+    p {
+        font-size: 18px;
+    }
+
     .companyName {
-        margin-left: 25px;
+        margin-left: 20px;
+        font-size: 44px;
     }
 
     .drinkCard {
@@ -50,14 +56,6 @@
 
     .costalInformation div{
         margin: 15px;
-    }
-
-    .costalInformation div.sanDiego {
-        text-align: center;
-    }
-    
-    .costalInformation div.losAngeles{
-        text-align: center;
     }
 
     .weatherCard {
@@ -111,4 +109,21 @@
         grid-row: 6/7;
     }
 
+    /*Fresh Page*/
+    .fruitForm {
+        margin: 0 100px;
+    }
+
+    /*About Us Page*/
+    .googleMap {
+        width: 50%;
+    }
+
+    .contactForm {
+        margin: 0 100px;
+    }
+
+    input.submitBtn {
+        margin: 10px 150px;
+    }
 }
