--- a/bountifulFoods/css/small.css
+++ b/bountifulFoods/css/small.css
@@ -1,3 +1,4 @@
+/*Home Page*/
 h1 {
     font-family: 'Lora', serif, sans-serif;
 }
@@ -33,9 +34,11 @@ header {
 .companyName {
     grid-column: 2/3;
     grid-row: 1/2;
-    margin-left: 10px;
+    margin-left: 5px;
     color: white;
-    font-size: 24px;
+    font-size: 28px;
+    justify-self: left;
+    align-self: center;
 }
 
 nav {
@@ -111,12 +114,12 @@ nav ul.open {
     grid-template-columns: auto;
     grid-template-rows: repeat(4, auto);
     grid-gap: 1em;
-    margin: 0 40px;
 }
 
 div {
     border: 3px solid black;
     background-color: #95d5b2;
+    margin: auto;
 }
 
 .costalInformation {
@@ -125,15 +128,22 @@ div {
 
 .costalInformation div {
     background-color: #52b788;
+    text-align: center;
+    margin: 10px;
+}
+
+.costalInformation div p {
+    margin: 0 10px 15px 10px;
+}
+
+.costalCities {
+    margin: 10px;
 }
 
 .drinkCard {
     text-align: center;
     height: 100%;
-}
-
-.drinkCard h2 {
-
+    background-color: #52b788;
 }
 
 .drinkCard a {
@@ -203,10 +213,11 @@ div {
     grid-row: 6/7;
 }
 
+/*Footer*/
 footer {
     display: grid;
     grid-template-columns: repeat(5, auto);
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(6, auto);
     text-align: center;
     margin-top: 20px;
     background-color: #52b788;
@@ -238,7 +249,145 @@ footer p {
     justify-self: start;
 }
 
+.contactUs {
+    grid-column: 3/4;
+    grid-row: 3/4;
+}
+
+.address {
+    grid-column: 2/3;
+    grid-row: 4/5;
+}
+
+.email {
+    grid-column: 3/4;
+    grid-row: 4/5;
+}
+
+.phoneNum {
+    grid-column: 4/5;
+    grid-row: 4/5;
+}
+
 .lastUpdate{
     grid-column: 1/6;
+    grid-row: 6/7;
+}
+
+/*Fresh Page*/
+.fruitForm {
+    margin: 0 20px;
+}
+
+.redColor {
+    color: red;
+}
+
+/*About Us Page*/
+.aboutMain {
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: repeat(12, auto);
+}
+
+.contactHeader {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    text-align: center;
+}
+
+.contactAddress {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    text-align: center;
+}
+
+.contactEmail {
+    grid-column: 1/2;
     grid-row: 3/4;
+    text-align: center;
+}
+
+.contactPhone {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    text-align: center;
+}
+
+.historicalHeader {
+    grid-column: 1/2;
+    grid-row: 5/6;
+    text-align: center;
+}
+
+.historicalInfo {
+    grid-column: 1/2;
+    grid-row: 6/7;
+    text-align: center;
+}
+
+.locationHeader {
+    grid-column: 1/2;
+    grid-row: 7/8;
+    text-align: center;
+}
+
+.googleMap {
+    grid-column: 1/2;
+    grid-row: 8/9;
+    justify-self: center;
+    margin: 20px;
+    width: 90%;
+    height: 100%;
+}
+
+.formHeader {
+    grid-column: 1/2;
+    grid-row: 9/10;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.contactForm {
+    grid-column: 1/2;
+    grid-row: 10/11;
+    margin: 0 10px;
+
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+}
+
+form fieldset {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-color: #95d5b2;
+}
+
+form label input {
+    width: 98%;
+    padding: 10px 5px;
+}
+
+form label textarea {
+    width: 98%;
+    padding: 20px 5px;
+}
+
+input.submitBtn {
+    grid-column: 1/2;
+    grid-row: 2/3;
+
+    text-align: center;
+    margin: 10px 50px;
+    padding: 10px;
+    font-size: 24px;
+    font-family: 'Solway', serif, sans-serif;
+
+    background-color: #52b788;
+}
+
+input.submitBtn:hover {
+    background-color: #40916c;
+    color: white;
 }
