--- a/bountifulFoods/css/large.css
+++ b/bountifulFoods/css/large.css
@@ -48,6 +48,10 @@
         grid-gap: 2em;
     }
 
+    p {
+        font-size: 16px;
+    }
+
     .drinkCard {
         grid-column: 1/2;
         grid-row: 1/2;
@@ -103,6 +107,18 @@
     .weatherCard {
         grid-column: 1/3;
         grid-row: 3/4;
+        margin: 0 200px;
+    }
+
+    .weatherCard p {
+        font-size: 18px;
+    }
+
+    #weatherImg {
+        width: 50%;
+    }
+
+    .forcastTitle {
         margin: 0 200px;
     }
 
