--- a/bountifulFoods/css/medium.css
+++ b/bountifulFoods/css/medium.css
@@ -12,7 +12,7 @@
     }
 
     p {
-        font-size: 18px;
+        font-size: 24px;
     }
 
     .companyName {
@@ -67,46 +67,16 @@
         margin: 0 100px;
     }
 
-    .weatherCard h2 {
-        grid-column: 1/4;
-        grid-row: 1/2;
-    }
-
-    #weatherImg {
-        grid-column: 1/3;
-        grid-row: 2/5;
-        justify-self: center;
-        align-self: center;
-    }
-
     #temp {
-        grid-column: 3/4;
-        grid-row: 3/4;
+        font-size: 44px;
     }
 
-    #weatherType {
-        grid-column: 3/4;
-        grid-row: 4/5;
+    .forcastTitle {
+        margin: 0 50px;
     }
 
-    #humidity {
-        grid-column: 3/4;
-        grid-row: 5/6;
-    }
-
-    #firstTemp {
-        grid-column: 1/2;
-        grid-row: 6/7;
-    }
-
-    #secondTemp {
-        grid-column: 2/3;
-        grid-row: 6/7;
-    }
-
-    #thirdTemp {
-        grid-column: 3/4;
-        grid-row: 6/7;
+    footer p {
+        font-size: 18px;
     }
 
     /*Fresh Page*/
