--- a/bountifulFoods/css/small.css
+++ b/bountifulFoods/css/small.css
@@ -169,6 +169,7 @@ div {
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(6, auto);
     text-align: center;
+    margin: 0 50px;
 }
 
 .weatherCard h2 {
@@ -178,24 +179,35 @@ div {
 
 #weatherImg {
     grid-column: 1/3;
-    grid-row: 2/5;
+    grid-row: 2/4;
     justify-self: center;
     align-self: center;
+    width: 100%;
 }
 
 #temp {
     grid-column: 3/4;
-    grid-row: 3/4;
+    grid-row: 2/3;
+    font-size: 24px;
 }
 
 #weatherType {
     grid-column: 3/4;
-    grid-row: 4/5;
+    grid-row: 3/4;
+    text-transform: capitalize;
 }
 
 #humidity {
     grid-column: 3/4;
+    grid-row: 4/5;
+}
+
+.forcastTitle {
+    grid-column: 1/4;
     grid-row: 5/6;
+    border-bottom: solid 1px black;
+    margin: 0 40px;
+    padding-bottom: 5px;
 }
 
 #firstTemp {
