--- a/bountifulFoods/css/small.css
+++ b/bountifulFoods/css/small.css
@@ -295,6 +295,19 @@ footer p {
     color: red;
 }
 
+input.fruitBtn {
+    text-align: center;
+    padding: 10px;
+    font-size: 24px;
+    font-family: 'Solway', serif, sans-serif;
+
+    background-color: #52b788;
+}
+
+fieldset.fruitSelect label input {
+    width: 20px;
+}
+
 /*About Us Page*/
 .aboutMain {
     display: grid;
